# sgi

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  DockerFile-py_311_3  Jenkinsfile  Makefile  README.md  alembic.ini.template  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 52eeab7229e1_creating_product_table.py
secrets/: variables.ini.template
src/: api.py  config.py  conftest.py  main.py
src/models/: __init__.py  product.py
src/routes/: default.py  product.py
src/schemas/: product.py
src/services/: pg_connection.py  product.py
tests/: test_product.py
tests/integration/: conftest.py  test_product.py
tests/integration/product/: conftest.py  test_product.py
tests/integration/reports/: report.html  report.xml
tests/unit/routes/: conftest.py  test_product.py
