[project]
name = "src"
version = "0.1.0"
description = "SGI"
authors = [
    {name = "Daniel ML",email = "eafitense@gmail.com"}
]
packages = [
    {include = "src"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "remote-pdb (>=2.1.0,<3.0.0)"
]

[[poetry.source]]
name = "sgi"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
